--- a/css/css-sans-1.0.0.css
+++ b/css/css-sans-1.0.0.css
@@ -6,38 +6,13 @@
 
 .A {
   position: relative;
+  top: 12.5px;
   left: 30px;
-  width: 60px;
-  height: 91px;
-  border-bottom: solid 14px #000000;
-}
-.A:before {
-  -webkit-transform: skew(-19deg, 0);
-  -moz-transform: skew(-19deg, 0);
-  -ms-transform: skew(-19deg, 0);
-  -o-transform: skew(-19deg, 0);
-  transform: skew(-19deg, 0);
-  position: absolute;
-  content: '';
-  top: 12.5px;
-  left: 0;
-  width: 16px;
-  height: 125px;
-  background-color: #000000;
-}
-.A:after {
-  -webkit-transform: skew(19deg, 0);
-  -moz-transform: skew(19deg, 0);
-  -ms-transform: skew(19deg, 0);
-  -o-transform: skew(19deg, 0);
-  transform: skew(19deg, 0);
-  position: absolute;
-  content: '';
-  top: 12.5px;
-  left: 45px;
-  width: 16px;
-  height: 125px;
-  background-color: #000000;
+  width: 0;
+  height: 0;
+  border-left: 45px solid transparent;
+  border-right: 45px solid transparent;
+  border-bottom: 90px solid #000000;
 }
 .B {
   position: relative;
@@ -106,33 +81,26 @@
   height: 90px;
 }
 .D {
-  -webkit-transform: rotate(15deg);
-  -moz-transform: rotate(15deg);
-  -ms-transform: rotate(15deg);
-  -o-transform: rotate(15deg);
-  transform: rotate(15deg);
   position: relative;
   top: 12.5px;
   left: 10px;
-  border-left: solid 15px #000000;
-  height: 135px;
+  width: 90px;
+  height: 90px;
+  background-color: #000000;
 }
 .D:before {
-  
   position: absolute;
   content: '';
-  top: 0;
-  left: 0;
-  width: 35px;
-  height: 70px;
-  border-width: 15px 15px 50px 0;
-  border-color: #000000;
+  top: -29.5px;
+  left: 45px;
+  width: 45px;
+  height: 90px;
+  border-width: 30px 30px 30px 0;
+  border-color: #ffffff;
   border-style: solid;
-  -webkit-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  -moz-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  -ms-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  -o-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  border-radius: 0 300% 300% 0 / 0 180% 180% 0;
+-webkit-border-radius: 90px;
+-moz-border-radius: 90px;
+border-radius: 0px 90px 90px 0px;
 }
 .E {
   position: relative;
@@ -176,66 +144,36 @@
   position: relative;
   top: 12.5px;
   left: 10px;
-  width: 84px;
-  height: 95px;
-  border-width: 50px 12px 15px 16px;
-  border-color: #000000;
-  border-style: solid;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+  background-color: #000000;
 }
 .G:before {
-  -webkit-transform: rotate(15deg);
-  -moz-transform: rotate(15deg);
-  -ms-transform: rotate(15deg);
-  -o-transform: rotate(15deg);
-  transform: rotate(15deg);
   position: absolute;
   content: '';
-  top: 30px;
-  left: 20px;
-  background-color: #ffffff;
-  width: 700px;
-  height: 200px;
-}
-.G:after {
-  -webkit-transform: rotate(15deg);
-  -moz-transform: rotate(15deg);
-  -ms-transform: rotate(15deg);
-  -o-transform: rotate(15deg);
-  transform: rotate(15deg);
-  position: absolute;
-  content: '';
-  bottom: 5px;
-  right: 49.5px;
-  width: 100px;
-  height: 36px;
-  border-width: 13px 14px 0 0;
-  border-color: #000000;
+  top: 30.5px;
+  left: 30px;
+  width: 30px;
+  height: 30px;
+  border-width: 30px 60px 60px 0;
+  border-color: #ffffff;
   border-style: solid;
+-webkit-border-radius: 90px;
+-moz-border-radius: 90px;
+border-radius: 0px 0px 90px 0px;
 }
+
 .H {
   position: relative;
   top: 12.5px;
   left: 10px;
-  width: 60px;
-  height: 125px;
-  border-width: 0 16px 0 16px;
+  width: 90px;
+  height: 30px;
+  border-width: 30px 0 30px 0;
   border-color: #000000;
   border-style: solid;
 }
-.H:before {
-  position: absolute;
-  content: '';
-  top: 53px;
-  left: 0;
-  width: 60px;
-  height: 14px;
-  background-color: #000000;
-}
+
 .I {
   z-index: 1;  
   position: relative;
@@ -321,19 +259,12 @@
   background-color: #000000;
 }
 .L {
-  -webkit-transform: rotate(15deg);
-  -moz-transform: rotate(15deg);
-  -ms-transform: rotate(15deg);
-  -o-transform: rotate(15deg);
-  transform: rotate(15deg);
   position: relative;
   top: 12.5px;
-  left: 10px;
-  width: 50px;
-  height: 100px;
-  border-width: 0 0 50px 16px;
-  border-color: #000000;
-  border-style: solid;
+  left: 40px;
+  width: 60px;
+  height: 60px;
+  background-color: #000000;
 }
 .M {
   position: relative;
@@ -377,45 +308,34 @@
   position: relative;
   top: 12.5px;
   left: 10px;
-  width: 63px;
-  height: 125px;
-  border-width: 0 15px 0 15px;
-  border-color: #000000;
-  border-style: solid;
+  width: 90px;
+  height: 90px;
+  background-color: #000000;
 }
 .N:before {
-  -webkit-transform: skew(30deg, 0);
-  -moz-transform: skew(30deg, 0);
-  -ms-transform: skew(30deg, 0);
-  -o-transform: skew(30deg, 0);
-  transform: skew(30deg, 0);
+  -webkit-transform: skew(35deg, 0);
+  -moz-transform: skew(35deg, 0);
+  -ms-transform: skew(35deg, 0);
+  -o-transform: skew(35deg, 0);
+  transform: skew(35deg, 0);
   position: absolute;
   content: '';
   top: 0;
-  left: 24px;
-  width: 15px;
-  height: 125px;
-  background-color: #000000;
+  left: 30px;
+  width: 30px;
+  height: 90px;
+  background-color: #ffffff;
 }
 .O {
-  -webkit-transform: rotate(15deg);
-  -moz-transform: rotate(15deg);
-  -ms-transform: rotate(15deg);
-  -o-transform: rotate(15deg);
-  transform: rotate(15deg);
   position: relative;
-  top: 0px;
+  top: 12.5px;
   left: 10px;
-  width: 40px;
+  width: 90px;
   height: 90px;
-  border-width: 70px 16px 14px 16px;
-  border-color: #000000;
-  border-style: solid;
-  -webkit-border-radius:60% / 30%;
-  -moz-border-radius:60% / 30%;
-  -ms-border-radius:60% / 30%;
-  -o-border-radius:60% / 30%;
-  border-radius:60% / 30%;
+  background: black;
+  -moz-border-radius: 45px;
+  -webkit-border-radius: 45px;
+  border-radius: 45px;
 }
 .P {
   position: relative;
@@ -527,56 +447,15 @@
   background-color: #000000;
 }
 .S {
-  -webkit-transform: rotate(14deg);
-  -moz-transform: rotate(14deg);
-  -ms-transform: rotate(14deg);
-  -o-transform: rotate(14deg);
-  transform: rotate(14deg);
   position: relative;
-  width: 105px;
-  height: 150px;
-  top: 10px;
+  top: 12.5px;
   left: 10px;
-}
-.S:before {
-  -webkit-transform: rotate(18deg);
-  -moz-transform: rotate(18deg);
-  -ms-transform: rotate(18deg);
-  -o-transform: rotate(18deg);
-  transform: rotate(18deg);
-  position: absolute;
-  content: '';
-  width: 44px;
-  height: 40px;
-  border-width: 14px 0 15px 15.5px;
-  border-color: #000000;
-  border-style: solid;
-  -webkit-border-radius: 220% 0 0 150% / 150% 0 0 100%;
-  -moz-border-radius: 220% 0 0 150% / 150% 0 0 100%;
-  -ms-border-radius: 220% 0 0 150% / 150% 0 0 100%;
-  -o-border-radius: 220% 0 0 150% / 150% 0 0 100%;
-  border-radius: 220% 0 0 150% / 150% 0 0 100%;
-}
-.S:after {
-  -webkit-transform: rotate(198deg);
-  -moz-transform: rotate(198deg);
-  -ms-transform: rotate(198deg);
-  -o-transform: rotate(198deg);
-  transform: rotate(198deg);
-  position: absolute;
-  content: '';
-  top: 65px;
-  left: 21px;
-  width: 52px;
-  height: 44px;
-  border-width: 14px 0 15px 15px;
-  border-color: #000000;
-  border-style: solid;
-  -webkit-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  -moz-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  -ms-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  -o-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  border-radius: 240% 0 0 110% / 140% 0 0 100%;
+  width: 90px;
+  height: 90px;
+  background: black;
+  -moz-border-radius: 45px 0 45px 0;
+  -webkit-border-radius: 45px 0 45px 0;
+  border-radius: 45px 0 45px 0;
 }
 .T {
   position: relative;
@@ -625,33 +504,11 @@
   position: relative;
   top: 12.5px;
   left: 30px;
-  width: 59px;
-}
-.V:before {
-  -webkit-transform: skew(18deg, 0);
-  -moz-transform: skew(18deg, 0);
-  -ms-transform: skew(18deg, 0);
-  -o-transform: skew(18deg, 0);
-  transform: skew(18deg, 0);
-  position: absolute;
-  content: '';
-  top: 0;
-  left: 0;
-  height: 125px;
-  border-left: solid 16px #000000;
-}
-.V:after {
-  -webkit-transform: skew(-18deg, 0);
-  -moz-transform: skew(-18deg, 0);
-  -ms-transform: skew(-18deg, 0);
-  -o-transform: skew(-18deg, 0);
-  transform: skew(-18deg, 0);
-  position: absolute;
-  content: '';
-  top: 0;
-  right: 0;
-  height: 125px;
-  border-left: solid 16px #000000;
+  width: 0;
+  height: 0;
+  border-left: 45px solid transparent;
+  border-right: 45px solid transparent;
+  border-top: 90px solid black;
 }
 .W {
   position: relative;
