--- a/css/css-sans-1.0.0.css
+++ b/css/css-sans-1.0.0.css
@@ -207,28 +207,30 @@
   border-style: solid;
 }
 .H {
- 
-}
-.H:before {
-  -webkit-transform: rotate(198deg);
-  -moz-transform: rotate(198deg);
-  -ms-transform: rotate(198deg);
-  -o-transform: rotate(198deg);
-  transform: rotate(198deg);
-  position: absolute;
-  content: '';
-  top: 65px;
-  left: 21px;
-  width: 52px;
-  height: 44px;
-  border-width: 14px 0 15px 15px;
+  position: relative;
+  top: 12.5px;
+  left: 10px;
+  width: 60px;
+  height: 125px;
+  border-width: 0 0px 0 15px;
   border-color: #000000;
   border-style: solid;
-  -webkit-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  -moz-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  -ms-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  -o-border-radius: 240% 0 0 110% / 140% 0 0 100%;
-  border-radius: 240% 0 0 110% / 140% 0 0 100%;
+}
+.H:before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 60px;
+  height: 95px;
+  border-width: 15px 15px 0px 15px;
+  border-color: #000000;
+  border-style: solid;
+  -webkit-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
+  -moz-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
+  -ms-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
+  -o-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
+  border-radius: 0 300% 300% 0 / 0 180% 180% 0;
 }
 .I {
   z-index: 1;  
