ei tea, viimane28.03

--- a/css/css-sans-1.0.0.css
+++ b/css/css-sans-1.0.0.css
@@ -6,38 +6,26 @@
 
 .A {
   position: relative;
-  left: 30px;
-  width: 60px;
-  height: 91px;
-  border-bottom: solid 14px #000000;
+  left: 40px;
+  width: 180px;
+  height: 98px;
+  border-bottom: solid 15px #000000;
 }
 .A:before {
-  -webkit-transform: skew(-19deg, 0);
-  -moz-transform: skew(-19deg, 0);
-  -ms-transform: skew(-19deg, 0);
-  -o-transform: skew(-19deg, 0);
-  transform: skew(-19deg, 0);
   position: absolute;
   content: '';
-  top: 12.5px;
-  left: 0;
-  width: 16px;
-  height: 125px;
-  background-color: #000000;
-}
-.A:after {
-  -webkit-transform: skew(19deg, 0);
-  -moz-transform: skew(19deg, 0);
-  -ms-transform: skew(19deg, 0);
-  -o-transform: skew(19deg, 0);
-  transform: skew(19deg, 0);
-  position: absolute;
-  content: '';
-  top: 12.5px;
-  left: 45px;
-  width: 16px;
-  height: 125px;
-  background-color: #000000;
+  top: 5.5px;
+  left: -15;
+  width: 160px;
+  height: 92.5px;
+  border-width: 15px 15px 0px 15px;
+  border-color: #000000;
+  border-style: solid;
+  -webkit-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -moz-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -ms-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -o-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  border-radius: 180% 180% 0 0 / 300% 300% 0 0;
 }
 .B {
   position: relative;
@@ -211,7 +199,7 @@
   top: 12.5px;
   left: 10px;
   width: 60px;
-  height: 125px;
+  height: 100px;
   border-width: 0 0px 0 15px;
   border-color: #000000;
   border-style: solid;
@@ -219,18 +207,18 @@
 .H:before {
   position: absolute;
   content: '';
-  top: 0;
-  left: 0;
-  width: 60px;
-  height: 95px;
+  top: 36px;
+  left: -15;
+  width: 85px;
+  height: 50px;
   border-width: 15px 15px 0px 15px;
   border-color: #000000;
   border-style: solid;
-  -webkit-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  -moz-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  -ms-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  -o-border-radius: 0 300% 300% 0 / 0 180% 180% 0;
-  border-radius: 0 300% 300% 0 / 0 180% 180% 0;
+  -webkit-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -moz-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -ms-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -o-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  border-radius: 180% 180% 0 0 / 300% 300% 0 0;
 }
 .I {
   z-index: 1;  
@@ -368,25 +356,32 @@
   position: relative;
   top: 12.5px;
   left: 10px;
-  width: 63px;
-  height: 125px;
-  border-width: 0 15px 0 15px;
+  width: 160px;
+  height: 100px;
+  border-width: 0 0px 0 15px;
   border-color: #000000;
   border-style: solid;
 }
 .N:before {
-  -webkit-transform: skew(30deg, 0);
-  -moz-transform: skew(30deg, 0);
-  -ms-transform: skew(30deg, 0);
-  -o-transform: skew(30deg, 0);
-  transform: skew(30deg, 0);
+ -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
   position: absolute;
   content: '';
-  top: 0;
-  left: 24px;
-  width: 15px;
-  height: 125px;
-  background-color: #000000;
+  top: 0.25px;
+  left: -15;
+  width: 160px;
+  height: 92.5px;
+  border-width: 15px 15px 0px 15px;
+  border-color: #000000;
+  border-style: solid;
+  -webkit-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -moz-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -ms-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  -o-border-radius: 180% 180% 0 0 / 300% 300% 0 0;
+  border-radius: 180% 180% 0 0 / 300% 300% 0 0;
 }
 .O {
   position: relative;
